maze.lessons.maze.randommouse.RandomMouseMaze.scala.error
RandomMouseMaze:6: error: value update is not a member of Int
random3()= nombre
^RandomMouseMaze:7: error: not found: value entier
if (entier=0)
    ^RandomMouseMaze:11: error: not found: value entier
else if (entier=1)
         ^RandomMouseMaze:15: error: not found: value entier
else if (entier=2)
         ^